crates/rpc-cli/tests/snapshots/typescript__snapshot_types_camel_case.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export interface ServerInfo {
  uptimeSecs: number;
  userId: string;
  isActive: boolean;
}

export type Procedures = {
  queries: {
  };
  mutations: {
  };
};
