crates/rpc-cli/tests/snapshots/typescript__snapshot_types_with_jsdoc.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

/** Documentation for TimeResponse. */
export interface TimeResponse {
  timestamp: number;
  message: string;
}

/** Documentation for CreateInput. */
export interface CreateInput {
  title: string;
  count: number;
}

/** Documentation for Item. */
export interface Item {
  id: number;
  title: string;
  tags: string[];
}

export type Procedures = {
  queries: {
    /** Documentation for hello. */
    hello: { input: string; output: string };
    /** Documentation for time. */
    time: { input: void; output: TimeResponse };
  };
  mutations: {
    /** Documentation for create_item. */
    create_item: { input: CreateInput; output: Item };
  };
};
