crates/rpc-cli/tests/snapshots/typescript__snapshot_untagged.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export type Value = null | string | [string, number] | { id: number; name: string };

export type Procedures = {
  queries: {
  };
  mutations: {
  };
};
